--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" href="SanaTays_2/style.css" />
+        <link rel="stylesheet" href="./style.css" />
         <script src="https://kit.fontawesome.com/95aca0ebd8.js" crossorigin="anonymous"></script>
         <title> Reservia - Réservation de vacances </title>
     </head>
@@ -11,7 +11,7 @@
 <!-- en-tête -->
 
         <header>
-            <img src="SanaTays_2/images/logo/Reservia@3x.png" alt="logo" id="logo"/>
+            <img src="images/logo/Reservia@3x.png" alt="logo" id="logo"/>
             <nav>
                 <ul id="nav-ancres">
                     <li><a href="#hebergements">Hébergements</a></li>
@@ -76,7 +76,7 @@
                     <div class="logements">
                         <a href="#">
                         <div class="logement">
-                            <img src="SanaTays_2/images/hebergements/4_small/auberge-cannebiere.jpg" alt="auberge de la cannebiere" />
+                            <img src="images/hebergements/4_small/auberge-cannebiere.jpg" alt="auberge de la cannebiere" />
                             <div class="description">
                             <h3> Auberge de la Cannebière </h3>
                             <p> Nuit à partir de <strong>25€</strong></p>
@@ -92,7 +92,7 @@
                         </a>
                         <a href="#">
                         <div class="logement">
-                            <img src="SanaTays_2/images/hebergements/4_small/hotel-port.jpg" alt="hotel du port" />
+                            <img src="images/hebergements/4_small/hotel-port.jpg" alt="hotel du port" />
                             <div class="description">
                             <h3> Hôtel du port </h3>
                             <p> Nuit à partir de <strong>52€</strong></p>
@@ -108,7 +108,7 @@
                         </a>
                         <a href="#">
                         <div class="logement">
-                            <img src="SanaTays_2/images/hebergements/4_small/hotel-mouettes.jpg" alt="hotel les mouettes" />
+                            <img src="images/hebergements/4_small/hotel-mouettes.jpg" alt="hotel les mouettes" />
                             <div class="description">
                             <h3> Hôtel Les mouettes </h3>
                             <p> Nuit à partir de <strong>76€</strong></p>
@@ -124,7 +124,7 @@
                         </a>
                         <a href="#">
                         <div class="logement">
-                            <img src="SanaTays_2/images/hebergements/4_small/hotel-mer.jpg" alt="hotel de la mer" />
+                            <img src="images/hebergements/4_small/hotel-mer.jpg" alt="hotel de la mer" />
                             <div class="description">
                             <h3> Hôtel de la mer </h3>
                             <p> Nuit à partir de <strong>46€</strong></p>
@@ -140,7 +140,7 @@
                         </a>
                         <a href="#">
                         <div class="logement">
-                            <img src="SanaTays_2/images/hebergements/4_small/auberge-panier.jpg" alt="auberge le panier" />
+                            <img src="images/hebergements/4_small/auberge-panier.jpg" alt="auberge le panier" />
                             <div class="description">
                             <h3> Auberge Le Panier </h3>
                             <p> Nuit à partir de <strong>23€</strong></p>
@@ -156,7 +156,7 @@
                         </a>
                         <a href="#">
                         <div class="logement">
-                            <img src="SanaTays_2/images/hebergements/4_small/hotel-amina.jpg" alt="hotel chez amina" />
+                            <img src="images/hebergements/4_small/hotel-amina.jpg" alt="hotel chez amina" />
                             <div class="description">
                             <h3> Hôtel chez Amina </h3>
                             <p> Nuit à partir de <strong>96€</strong></p>
@@ -181,7 +181,7 @@
                     <div id="populaires">
                         <a href="#">
                         <div class="populaire">
-                            <img src="SanaTays_2/images/hebergements/4_small/hotel-soleil.jpg" alt="hotel le soleil du matin" />
+                            <img src="images/hebergements/4_small/hotel-soleil.jpg" alt="hotel le soleil du matin" />
                             <div class="description-2">
                             <h3> Hôtel Le soleil du matin </h3>
                             <p> Nuit à partir de <strong>128€</strong></p>
@@ -199,7 +199,7 @@
                         </a>
                         <a href="#">
                         <div class="populaire">
-                            <img src="SanaTays_2/images/hebergements/4_small/chambre-hotes.jpg" alt="au coeur de l'eau" />
+                            <img src="images/hebergements/4_small/chambre-hotes.jpg" alt="au coeur de l'eau" />
                             <div class="description-2">
                             <h3> Au coeur de l'eau </br> Chambres d'hôtes </h3>
                             <p> Nuit à partir de <strong>71€</strong></p>
@@ -215,7 +215,7 @@
                         </a>
                         <a href="#">
                         <div class="populaire">
-                            <img src="SanaTays_2/images/hebergements/4_small/hotel-bleu.jpg" alt="hotel tout bleu et blanc" />
+                            <img src="images/hebergements/4_small/hotel-bleu.jpg" alt="hotel tout bleu et blanc" />
                             <div class="description-2">
                             <h3> Hôtel Tout bleu et Blanc </h3>
                             <p> Nuit à partir de <strong>68€</strong></p>
@@ -243,40 +243,40 @@
                 <div id="activites">
                     <a href="#">
                     <figure class="figure-verticale">
-                        <img src="SanaTays_2/images/activites/4_small/vieux-port.jpg" alt="le vieux port">
+                        <img src="images/activites/4_small/vieux-port.jpg" alt="le vieux port">
                         <figcaption> Vieux port </figcaption>
                     </figure>
                     </a>
                     <div class="figure-horizontale">
                         <a href="#">
                         <figure>
-                            <img src="SanaTays_2/images/activites/4_small/fort-pomègues.jpg" alt="fort de pomegues">
+                            <img src="images/activites/4_small/fort-pomègues.jpg" alt="fort de pomegues">
                             <figcaption> Fort de Pomègues </figcaption>
                         </figure>
                         </a>
                         <a href="#">
                         <figure>
-                            <img src="SanaTays_2/images/activites/4_small/iles-frioul.jpg" alt="iles du frioul">
+                            <img src="images/activites/4_small/iles-frioul.jpg" alt="iles du frioul">
                             <figcaption> Îles du Frioul </figcaption>
                         </figure>
                         </a>
                     </div>
                     <a href="#">
                     <figure class="figure-verticale">
-                        <img src="SanaTays_2/images/activites/4_small/parc-calanques.jpg" alt="parc national des calanques">
+                        <img src="images/activites/4_small/parc-calanques.jpg" alt="parc national des calanques">
                         <figcaption> Parc National des Calanques</figcaption>
                     </figure>
                     </a>
                     <div class="figure-horizontale">
                         <a href="#">
                         <figure>
-                            <img src="SanaTays_2/images/activites/4_small/notre-dame.jpg" alt="notre dame de la garde">
+                            <img src="images/activites/4_small/notre-dame.jpg" alt="notre dame de la garde">
                             <figcaption> Notre-Dame-de-la-Garde </figcaption>
                         </figure>
                         </a>
                         <a href="#">
                         <figure>
-                            <img src="SanaTays_2/images/activites/4_small/parc-longchamp.jpg" alt="parc longchamp">
+                            <img src="images/activites/4_small/parc-longchamp.jpg" alt="parc longchamp">
                             <figcaption> Parc Longchamp </figcaption>
                         </figure>
                         </a>
