--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
 
 <!-- partie du milieu : "hébergements" et "les plus populaires" -->
 
-            <section id="section-milieu">
+            <div id="section-milieu">
                 <article id="hebergements">
                     <h2> Hébergements à Marseille </h2>
-                    <div class="logements">
+                    <div id="logements">
                         <a href="#">
                         <div class="logement">
                             <img src="images/hebergements/4_small/auberge-cannebiere.jpg" alt="auberge de la cannebiere" />
@@ -186,8 +186,6 @@
                             <h3> Hôtel Le soleil du matin </h3>
                             <p> Nuit à partir de <strong>128€</strong></p>
                             <div>
-                                </br>
-                                </br>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -201,7 +199,7 @@
                         <div class="populaire">
                             <img src="images/hebergements/4_small/chambre-hotes.jpg" alt="au coeur de l'eau" />
                             <div class="description-2">
-                            <h3> Au coeur de l'eau </br> Chambres d'hôtes </h3>
+                            <h3> Au coeur de l'eau Chambres d'hôtes </h3>
                             <p> Nuit à partir de <strong>71€</strong></p>
                             <div id="etoiles">
                                 <i class="fas fa-star"></i>
@@ -220,8 +218,6 @@
                             <h3> Hôtel Tout bleu et Blanc </h3>
                             <p> Nuit à partir de <strong>68€</strong></p>
                             <div>
-                                </br>
-                                </br>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -234,52 +230,56 @@
                     </div>
                 </aside>
                 
-            </section>
+            </div>
 
 <!-- partie du bas : activités -->
 
             <section id="activites-marseille">
                 <h2> Activités à Marseille </h2>
                 <div id="activites">
-                    <a href="#">
+                    <div>
                     <figure class="figure-verticale">
+                        <a href="#">
                         <img src="images/activites/4_small/vieux-port.jpg" alt="le vieux port">
                         <figcaption> Vieux port </figcaption>
+                        </a>
                     </figure>
-                    </a>
+                    </div>
                     <div class="figure-horizontale">
-                        <a href="#">
                         <figure>
+                            <a href="#">
                             <img src="images/activites/4_small/fort-pomègues.jpg" alt="fort de pomegues">
                             <figcaption> Fort de Pomègues </figcaption>
+                            </a>
                         </figure>
-                        </a>
-                        <a href="#">
                         <figure>
+                            <a href="#">
                             <img src="images/activites/4_small/iles-frioul.jpg" alt="iles du frioul">
                             <figcaption> Îles du Frioul </figcaption>
+                            </a>
                         </figure>
-                        </a>
                     </div>
-                    <a href="#">
+                    <div>
                     <figure class="figure-verticale">
+                        <a href="#">
                         <img src="images/activites/4_small/parc-calanques.jpg" alt="parc national des calanques">
                         <figcaption> Parc National des Calanques</figcaption>
+                        </a>
                     </figure>
-                    </a>
+                    </div>
                     <div class="figure-horizontale">
-                        <a href="#">
                         <figure>
+                            <a href="#">
                             <img src="images/activites/4_small/notre-dame.jpg" alt="notre dame de la garde">
                             <figcaption> Notre-Dame-de-la-Garde </figcaption>
+                            </a>
                         </figure>
-                        </a>
-                        <a href="#">
                         <figure>
+                            <a href="#">
                             <img src="images/activites/4_small/parc-longchamp.jpg" alt="parc longchamp">
                             <figcaption> Parc Longchamp </figcaption>
+                            </a>
                         </figure>
-                        </a>
                     </div>
                 </div>
             </section>
