--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://kit.fontawesome.com/95aca0ebd8.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="./style.css" />
         <title> Reservia - Réservation de vacances </title>
@@ -11,13 +13,13 @@
 <!-- en-tête -->
 
         <header>
-            <img src="images/logo/Reservia@3x.png" alt="logo" id="logo"/>
+            <img src="images/logo/Reservia@3x.png" alt="logo" class="logo"/>
             <nav>
-                <ul id="nav-ancres">
+                <ul class="nav-ancres">
                     <li><a href="#hebergements">Hébergements</a></li>
                     <li><a href="#activites-marseille">Activités</a></li>
                 </ul>
-                <ul id="nav-inscription">
+                <ul class="nav-inscription">
                     <li><a href="#"><strong>S'inscrire</strong></a></li>
                 </ul>
             </nav>
@@ -30,19 +32,19 @@
             <section>
                 <h1> Trouvez votre hébergement pour des vacances de rêve</h1>
                 <p>En plein centre ville ou en pleine nature</p>
-                <div id="barre-recherche">
+                <div class="barre-recherche">
                     <form method="post" action="#">
                         <i class="fas fa-map-marker-alt" style="color: black" id="icone-map"></i>
-                        <input type="search" name="recherche" placeholder="Marseille, France" id="barre-saisie"/>
-                        <input type="submit" value="Rechercher" id="bouton-rechercher-desktop"/>
-                        <div id="bouton-rechercher-mobile">
+                        <input type="search" name="recherche" placeholder="Marseille, France" class="barre-saisie"/>
+                        <input type="submit" value="Rechercher" class="bouton-rechercher-desktop"/>
+                        <div class="bouton-rechercher-mobile">
                         <input type="submit" value=""/>
                         <i class="fas fa-search"></i>
                         </div>
                     </form>
                 </div>
-                <div id="filtres">
-                    <div id="titre-filtres">
+                <div class="filtres">
+                    <div class="titre-filtres">
                     <p> Filtres </p>
                     </div>
                     <div class="filtre">
@@ -62,7 +64,7 @@
                         <p> Animaux autorisés </p>
                     </div>
                 </div>
-                <div id="info">
+                <div class="info">
                     <i class="fas fa-info"></i>
                     <p> Plus de 500 logements sont disponibles dans cette ville </p>
                 </div>
@@ -70,8 +72,8 @@
 
 <!-- partie du milieu : "hébergements" et "les plus populaires" -->
 
-            <div id="section-milieu">
-                <article id="hebergements">
+            <div class="section-milieu">
+                <section id="hebergements">
                     <h2> Hébergements à Marseille </h2>
                     <div id="logements">
                         <a href="#">
@@ -172,9 +174,9 @@
                         </a>
                     </div>
                     <p><strong> Afficher plus </strong></p>
-                </article>
+                </section>
                 <aside>
-                    <div id="titre-aside">
+                    <div class="titre-aside">
                         <h2>Les plus populaires</h2>
                         <i class="fas fa-chart-line" style="color: black"></i>
                     </div>
@@ -236,7 +238,7 @@
 
             <section id="activites-marseille">
                 <h2> Activités à Marseille </h2>
-                <div id="activites">
+                <div class="activites">
                     <div>
                         <a href="#">
                         <figure class="figure-verticale">
@@ -247,13 +249,13 @@
                     </div>
                     <div class="figure-horizontale">
                         <a href="#">
-                        <figure>
+                        <figure id="pomegues">
                             <img src="images/activites/4_small/fort-pomègues.jpg" alt="fort de pomegues">
                             <figcaption> Fort de Pomègues </figcaption>
                         </figure>
                         </a>
                         <a href="#">
-                        <figure>
+                        <figure id="frioul">
                             <img src="images/activites/4_small/iles-frioul.jpg" alt="iles du frioul">
                             <figcaption> Îles du Frioul </figcaption>
                         </figure>
@@ -269,13 +271,13 @@
                     </div>
                     <div class="figure-horizontale">
                         <a href="#">
-                        <figure>
+                        <figure id="garde">
                             <img src="images/activites/4_small/notre-dame.jpg" alt="notre dame de la garde">
                             <figcaption> Notre-Dame-de-la-Garde </figcaption>
                         </figure>
                         </a>
                         <a href="#">
-                        <figure>
+                        <figure id="longchamp">
                             <img src="images/activites/4_small/parc-longchamp.jpg" alt="parc longchamp">
                             <figcaption> Parc Longchamp </figcaption>
                         </figure>
