Réadaptation à la maquette

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                             <div class="description-2">
                             <h3> Au coeur de l'eau Chambres d'hôtes </h3>
                             <p> Nuit à partir de <strong>71€</strong></p>
-                            <div id="etoiles">
+                            <div id="etoiles" style="margin-top: 15px">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -215,7 +215,7 @@
                         </a>
                         <a href="#">
                         <div class="populaire">
-                            <img src="images/hebergements/4_small/hotel-bleu.jpg" alt="hotel tout bleu et blanc" />
+                            <img src="images/hebergements/4_small/hotel-bleu.jpg" alt="hotel tout bleu et blanc"/>
                             <div class="description-2">
                             <h3> Hôtel Tout bleu et Blanc </h3>
                             <p> Nuit à partir de <strong>68€</strong></p>
